--- a/Lab4Struts2/WebContent/WEB-INF/web.xml
+++ b/Lab4Struts2/WebContent/WEB-INF/web.xml
@@ -1,42 +1,46 @@
-<web-app id="WebApp_9" version="2.4" 
-	xmlns="http://java.sun.com/xml/ns/j2ee" 
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+<web-app id="WebApp_9" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<display-name>Lab4Struts2</display-name>
-	
-	 <welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
-  	  
-  	  <context-param>
+	<context-param>
 		<param-name> org.apache.tiles.impl.BasicTilesContainer.DEFINITIONS_CONFIG </param-name>
 		<param-value>/WEB-INF/tiles.xml</param-value>
 	</context-param>
-
 	<listener>
 		<listener-class>org.apache.struts2.tiles.StrutsTilesListener </listener-class>
 	</listener>
-	
 	<listener>
 		<listener-class>md.victordov.lab.common.HibernateListener</listener-class>
 	</listener>
-
-
 	<filter>
 		<filter-name>struts2</filter-name>
 		<filter-class>org.apache.struts2.dispatcher.FilterDispatcher</filter-class>
 	</filter>
-	
 	<filter-mapping>
 		<filter-name>struts2</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
 	<session-config>
 		<session-timeout>
             30
         </session-timeout>
 	</session-config>
+	<!-- Security Constraint will remove the access to the jsp
+	Usually this can be avoided by putting all jsp's in the WEB-INF folder and that will remove direct access to files.
+	However just to be sure, security is added.-->
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Deny Direct Access</web-resource-name>
+			<description/>
+			<url-pattern>*.jsp</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>Denied</role-name>
+		</auth-constraint>
+	</security-constraint>
+	<security-role>
+		<role-name>Denied</role-name>
+	</security-role>
 	
 </web-app>
-
