Pagination with full Sorting on all columns
DisplayTag used. Need more configuration for exporting files, should
paginize only a certain amount of pages from database and not whole
table.

--- a/Lab4Struts2/resources/global.properties
+++ b/Lab4Struts2/resources/global.properties
@@ -9,7 +9,7 @@ global.univId = University Id
 global.cursId = Curs Id
 global.profesorId = Professor Id
 global.studentId = Student Id
-global.studcurs = Student-Curs Id
+global.studcursId = Student-Curs Id
 global.denum = Name 
 global.name = Name
 global.lname = Last Name
