--- a/Lab4Struts2/WebContent/WEB-INF/web.xml
+++ b/Lab4Struts2/WebContent/WEB-INF/web.xml
@@ -13,15 +13,35 @@
 	<listener>
 		<listener-class>md.victordov.lab.common.HibernateListener</listener-class>
 	</listener>
+	
+		<filter>
+    <filter-name>ResponseOverrideFilter</filter-name>
+    <filter-class>org.displaytag.filter.ResponseOverrideFilter</filter-class>
+    <init-param>
+  <param-name>buffer</param-name>
+  <param-value>false</param-value>
+  </init-param>
+  </filter>
+	
 	<filter>
 		<filter-name>struts2</filter-name>
 		<filter-class>org.apache.struts2.dispatcher.FilterDispatcher</filter-class>
 	</filter>
+	
+
+	  <filter-mapping>
+    <filter-name>ResponseOverrideFilter</filter-name>
+    <url-pattern>*.html</url-pattern>
+  </filter-mapping>   
+  
+  
 	<filter-mapping>
 		<filter-name>struts2</filter-name>
 		<url-pattern>/*</url-pattern>
 		
 	</filter-mapping>
+  
+   
 	<session-config>
 		<session-timeout>
             30
@@ -30,18 +50,6 @@
 	<!-- Security Constraint will remove the access to the jsp
 	Usually this can be avoided by putting all jsp's in the WEB-INF folder and that will remove direct access to files.
 	However just to be sure, security is added.-->
-	<security-constraint>
-		<web-resource-collection>
-			<web-resource-name>Deny Direct Access</web-resource-name>
-			<description/>
-			<url-pattern>*.jsp</url-pattern>
-		</web-resource-collection>
-		<auth-constraint>
-			<role-name>Denied</role-name>
-		</auth-constraint>
-	</security-constraint>
-	<security-role>
-		<role-name>Denied</role-name>
-	</security-role>
+
 	
 </web-app>
