--- a/Lab4Struts2/src/log4j.properties
+++ b/Lab4Struts2/src/log4j.properties
@@ -34,3 +34,4 @@ log4j.logger.org.hibernate.event.def.AbstractFlushingEventListener=SEVERE
 log4j.logger.org.codehaus.xfire=INFO
 log4j.logger.httpclient=DEBUG
 log4j.logger.org.hibernate.exception.ConstraintViolationException=FATAL
+log4j.logger.org.apache.Logger = DEBUG
