--- a/Lab4Struts2/src/log4j.properties
+++ b/Lab4Struts2/src/log4j.properties
@@ -35,3 +35,7 @@ log4j.logger.org.codehaus.xfire=INFO
 log4j.logger.httpclient=DEBUG
 log4j.logger.org.hibernate.exception.ConstraintViolationException=FATAL
 log4j.logger.org.apache.Logger = DEBUG
+
+# Struts OgnlUtil issues unimportant warnings
+log4j.logger.com.opensymphony.xwork2.util.OgnlUtil=error
+log4j.logger.com.opensymphony.xwork2.ognl.OgnlValueStack=error
